[package]
name = "npma"
version = "0.1.0"
description = "Nginx Proxy Manager access log analyzer"
authors = ["egoroff <egoroff@gmail.com>"]
repository = "https://github.com/aegoroff/npma"
homepage = "https://github.com/aegoroff/npma"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream =  { version = "0.1.17", features = ["io-util"] }
clap = { version = "4.5.29", features = ["std", "color", "suggestions", "cargo"] }
clap_complete = "4.5.44"
itertools = "0.14.0"
regex = "1.11.1"
comfy-table = "7.1.4"
color-eyre = "0.6.3"
indicatif = "0.17.11"
chrono = { version="0.4.39", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = "0.1.43"

[dev-dependencies]
rstest = "0.24.0"

[profile.release]
lto = true
strip = true
panic = 'abort'

[lints.rust]
unsafe_code = "forbid"
